[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/puzzle_dependencies/views/export_dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/puzzle_dependencies/export_formats/graphviz.gd" type="Script" id=2]

[node name="ExportDialog" type="WindowDialog"]
margin_right = 353.0
margin_bottom = 263.0
window_title = "Export"
script = ExtResource( 1 )

[node name="ExportFormats" type="Node" parent="."]

[node name="GraphViz" type="Node" parent="ExportFormats"]
script = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 343.0
margin_bottom = 253.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Margin/VBox"]
margin_right = 160.0
margin_bottom = 14.0
text = "Select board(s) to export:"

[node name="Boards" type="ItemList" parent="Margin/VBox"]
margin_top = 18.0
margin_right = 160.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_reselect = true

[node name="Label2" type="Label" parent="Margin/VBox"]
margin_right = 40.0
margin_bottom = 14.0
text = "Export format:"

[node name="Formats" type="OptionButton" parent="Margin/VBox"]
margin_right = 29.0
margin_bottom = 20.0

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label3" type="Label" parent="Margin/VBox/HBox"]
margin_right = 50.0
margin_bottom = 14.0
text = "Save to:"

[node name="SaveLocation" type="LineEdit" parent="Margin/VBox/HBox"]
margin_right = 333.0
margin_bottom = 203.0
size_flags_horizontal = 3

[node name="SaveLocationButton" type="ToolButton" parent="Margin/VBox/HBox"]
margin_right = 12.0
margin_bottom = 22.0

[node name="Center" type="CenterContainer" parent="Margin/VBox"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBox" type="HBoxContainer" parent="Margin/VBox/Center"]
margin_top = 10.0
margin_right = 102.0
margin_bottom = 30.0

[node name="ExportButton" type="Button" parent="Margin/VBox/Center/HBox"]
margin_right = 12.0
margin_bottom = 20.0
text = "Export"

[node name="DoneButton" type="Button" parent="Margin/VBox/Center/HBox"]
margin_left = -23.0
margin_top = -10.0
margin_right = 23.0
margin_bottom = 10.0
text = "Done"

[node name="BoardsAcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "No Board(s) Selected"
dialog_text = "Please select at least one board to export."

[node name="FormatAcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "No Format Selected"
dialog_text = "Please select an export format."

[node name="ExportAcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "Export Finished"
dialog_text = "Board(s) exported!"

[node name="LocationDoesNotExistAcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "Location Not Found"
dialog_text = "Please ensure that the save location actually exists."

[node name="ExportFileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 350, 550 )
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Open a Directory"
dialog_hide_on_ok = true
mode = 2

[connection signal="pressed" from="Margin/VBox/HBox/SaveLocationButton" to="." method="_on_SaveLocationButton_pressed"]
[connection signal="pressed" from="Margin/VBox/Center/HBox/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="Margin/VBox/Center/HBox/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="dir_selected" from="ExportFileDialog" to="." method="_on_ExportFileDialog_dir_selected"]
